--- a/templates/ta_page.html
+++ b/templates/ta_page.html
@@ -4,7 +4,7 @@
 
         <h1 class="display-4 p-3 text-center">
             {{g.user.first_name}} {{g.user.last_name}}'s 
-            Students for {{current_course.title}}
+            Students for {{teach_assisting.course.title}}
         </h1>
 
         <div class="row p-t-4">
@@ -15,29 +15,25 @@
                 Assignments Out
             </div>
             <div class="col-2 text-center">
-                Assignments Incomplete
+                Incompletes
             </div>
         </div>
 
-        {% for student in g.user.students %}
+        {% for student in teach_assisting.students %}
             <div class="row p-2 bg-light">
     
-                {% for enrolled in student.enrolled_in %}
-                    {% if enrolled.course_id == current_course.id %}
-                        <div class="col-8">
-                            <a href="/student_page/{{enrolled.id}}" 
-                            class="btn btn-primary">
-                                {{student.first_name}} {{student.last_name}}         
-                            </a>
-                        </div>
-                        <div class="col-2 text-center">
-                            {{ enrolled.submissions | rejectattr('turned_in') | list | length }}
-                        </div>
-                        <div class="col-2 text-center">
-                            {{ enrolled.submissions | rejectattr('complete') | list | length }}
-                        </div>
-                    {% endif %}
-                {% endfor %}
+                <div class="col-8">
+                    <a href="/student_page/{{student.id}}" 
+                    class="btn btn-primary">
+                        {{student.user.first_name}} {{student.user.last_name}}         
+                    </a>
+                </div>
+                <div class="col-2 text-center">
+                    {{ student.assignments | rejectattr('turned_in') | list | length }}
+                </div>
+                <div class="col-2 text-center">
+                    {{ student.assignments | rejectattr('complete') | list | length }}
+                </div>
             </div>
         {% endfor %}
     </div>
