--- a/templates/error_404.html
+++ b/templates/error_404.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+404
+{% endblock %}
+
 {% block content %}
 <h1 class="display-1">
     404: Page not found
