--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -2,6 +2,10 @@
 
 {% extends 'base.html' %}
 
+{% block title %}
+Log In
+{% endblock %}
+
 {% block content %}
 
   <div class="row justify-content-md-center">
