--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,6 +2,10 @@
 
 {% extends 'base.html' %}
 
+{% block title %}
+Sign Up page
+{% endblock %}
+
 {% block content %}
 
   <div class="row justify-content-md-center">
